# AI-Knowledge-Assistant

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .env  Dockerfile  ai_knowledge.db  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py  auth.py  chat.py  deps.py  document.py  mcp.py  schemas.py  upload.py
backend/app/core/: config.py  guardrails.py  security.py
backend/app/database/: __init__.py  database.py  models.py
backend/app/llm/: openai_service.py  prompt.py
backend/app/mcp/: client.py  server.py  tools.py
backend/app/rag/: chunking.py
backend/app/services/: agent_tools.py  chat_service.py  upload_service.py
backend/uploads/: dummy.txt  findingquick.docx
frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts  auth.interceptor.ts
frontend/src/app/chat/: chat.component.css  chat.component.html  chat.component.ts
frontend/src/app/chat-history/: chat-history.component.css  chat-history.component.html  chat-history.component.ts
frontend/src/app/documents/: documents.component.css  documents.component.html  documents.component.ts
frontend/src/app/login/: login.component.css  login.component.html  login.component.ts
frontend/src/app/models/: document.ts
frontend/src/app/register/: register.component.css  (+2 more)
frontend/src/environments/: environment.ts
(+115 files in other folders)
