[project]
name = "ai-knowledge-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt==3.2.2",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "mcp>=1.28.1",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sentence-transformers>=5.6.0",
    "sqlalchemy>=2.0.51",
    "sse-starlette>=3.4.5",
    "tiktoken>=0.13.0",
    "unstructured>=0.23.1",
    "uvicorn>=0.49.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
